# gan-with-a-plan

./: .env.example  .gitignore  CHAT_APP_README.md  CLAUDE.md  IMPLEMENTATION_VERIFICATION.md  README.md  SPRINT1_ACCEPTANCE_CRITERIA.md  SPRINT1_SUMMARY.md  pyproject.toml  spec.md  test_chat_app.py
.claude/skills/adversarial-process-skill/: SKILL.md  examples-evaluator.md  examples-generator.md  examples-harness.md  examples-planner.md  examples-types.md
.claude/skills/project-overview-skill/: SKILL.md
.claude/skills/skill-reviewer/: SKILL.md
.claude/skills/streamlit-skill/: SKILL.md  examples.md
plans/: build-gan-components-init.md  configure-mode-comparison.md  initial-skill-and-setup.md
sample_data/: library_of_things.json
scripts/: compare_modes.py
src/: chat_app.py
src/gan_with_a_plan/: evaluator.py  generator.py  harness.py  logger.py  main.py  planner.py  sdk_utils.py  types.py
tests/: conftest.py  test_evaluator.py  test_harness.py  test_logger.py  test_types.py
work_items/: work_item_spec.md
